--- a/src/shared/RegisterPage/RegisterPage.scss
+++ b/src/shared/RegisterPage/RegisterPage.scss
@@ -10,15 +10,21 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.3;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 .registerContainer {
-  position: fixed;
-  top: 100px;
+  position: absolute;
+  top: 80px;
   margin: auto;
   opacity: 1;
   width: 100%;
   max-width: 100% !important;
+  height: 110%;
 }
 
 .registerForm {
