--- a/src/shared/RegisterPage/RegisterPage.scss
+++ b/src/shared/RegisterPage/RegisterPage.scss
@@ -1,7 +1,7 @@
 body,
 html {
+  background-color: #000000;
   height: 100%;
-  background: #000000;
 }
 .bg {
   background-image: url("../resources/img/login-background.jpg");
