--- a/src/shared/RegisterPage/RegisterPage.scss
+++ b/src/shared/RegisterPage/RegisterPage.scss
@@ -1,6 +1,5 @@
 body,
 html {
-  background-color: #000000;
   height: 100%;
 }
 .bg {
@@ -15,6 +14,11 @@ html {
   left: 0px;
   width: 100%;
   height: 100%;
+}
+.bg-black {
+  height: 100vh;
+  background-position: center;
+  background-color: #000000;
 }
 
 .registerContainer {
