Added proper dashboard routing

--- a/src/shared/Components/Containers/container.scss
+++ b/src/shared/Components/Containers/container.scss
@@ -1,9 +1,8 @@
 .mainContainer {
   background-color: #fefefe;
   margin-top: 15px;
+  margin-bottom: 15px;
+  padding-top: 20px;
   border-radius: 4px;
-}
-
-.header {
-  padding: 20px 0px !important;
+  border: solid 1px #e4e9f2;
 }
