--- a/src/shared/Components/Containers/container.scss
+++ b/src/shared/Components/Containers/container.scss
@@ -6,3 +6,8 @@
   border-radius: 4px;
   border: solid 1px #e4e9f2;
 }
+
+.noStyle {
+  background-color: transparent !important;
+  border: none !important;
+}
