--- a/src/shared/Components/Containers/container.scss
+++ b/src/shared/Components/Containers/container.scss
@@ -2,7 +2,11 @@
   background-color: #fefefe;
   margin-top: 15px;
   margin-bottom: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
   padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 4px;
   border: solid 1px #e4e9f2;
 }
@@ -10,4 +14,6 @@
 .noStyle {
   background-color: transparent !important;
   border: none !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
