--- a/src/investor/Portfolio/PortfolioPage.scss
+++ b/src/investor/Portfolio/PortfolioPage.scss
@@ -1,8 +1,8 @@
 .headerBar {
-  background-color: #fefefe;
-  border-radius: 4px;
-  border: solid 1px #e4e9f2;
-  padding: 20px;
+  // background-color: #fefefe;
+  // border-radius: 4px;
+  // border: solid 1px #e4e9f2;
+  // padding: 20px;
 }
 
 .MuiGrid-item {
