--- a/src/investor/Properties/PropertyPage.scss
+++ b/src/investor/Properties/PropertyPage.scss
@@ -1,17 +1,73 @@
 @import "./node_modules/react-vis/dist/style";
-.detailPage {
-  .mainImage {
+
+.detailCard {
+  background-color: #fefefe;
+  border: solid 1px #e4e9f2;
+  padding: 32px;
+  margin: 20px;
+
+  .price {
+    font-size: 24px;
+    font-weight: 600;
+    color: #06ad74;
+    padding-bottom: 20px;
+  }
+}
+
+.headerImage {
+  overflow: hidden;
+  height: 400px;
+  padding: 0px !important;
+
+  img {
     width: 100%;
-    height: 100%;
+    margin-top: -200px;
+    z-index: -1;
+    -webkit-mask-image: -webkit-gradient(
+      linear,
+      right top,
+      left top,
+      from(rgba(0, 0, 0, 0.8)),
+      to(rgba(0, 0, 0, 0))
+    );
   }
 
-  .actionButtons {
-    margin: 10px 15px;
+  .titleContainer {
+    position: absolute;
+    margin-top: 85px;
+    height: 400px;
+    display: grid;
+    padding-left: 10px;
   }
+  .mainTitle {
+    height: 0px;
+    font-size: 100px;
+    font-weight: 600;
+    color: white;
+    text-shadow: 2px 2px 2px #777777;
+  }
+  .actionButton {
+    height: 50px;
+  }
+}
+.imageSliderContainer {
+}
 
+.detailContainer {
   .detailCard {
-    background-color: #fefefe;
-    border: solid 1px #e4e9f2;
-    padding: 32px;
+    padding: 20px !important;
+  }
+  .propertyDetails {
+    .label {
+      font-size: 14px;
+      color: #777777;
+      .labelText {
+        height: 0px;
+      }
+    }
+    .value {
+      font-size: 18px;
+      color: #2e2a2a;
+    }
   }
 }
