--- a/src/shared/Components/Containers/container.scss
+++ b/src/shared/Components/Containers/container.scss
@@ -1,10 +1,10 @@
 .mainContainer {
   background-color: #fefefe;
-  margin-top: 15px;
+  // margin-top: 15px;
   margin-bottom: 15px;
   margin-left: 20px;
   margin-right: 20px;
-  padding-top: 20px;
+  // padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 4px;
